# server

./: .wakatime-project  index.html  package.json
src/: App.css  App.tsx  BottomNavigationBar.tsx  ChooseCopterDialog.tsx  ConnectWifiStep.tsx  GenMapScreen.tsx  ListScreen.tsx  RunScreen.tsx  RunShowScreen.tsx  SelectingCopterStep.tsx  SettingUpOffboardStep.tsx  SetupScreen.tsx  ShowScreen.tsx  ToolBar.tsx  ToolsScreen.tsx  TuneScreen.tsx  UploadScreen.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: files_parser.rs  main.rs  setup.rs
